<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.training.companion.presentation.viewmodels.ScenarioViewModel" />

        <import type="android.view.View" />

        <import type="com.training.companion.presentation.viewmodels.ScenarioViewModel.UiState" />

        <import type="com.training.companion.presentation.viewmodels.ScenarioViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        onBackPressed="@{(view) -> viewModel.returnToPreviousFragment(view)}"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:alpha="0.2"
            android:contentDescription="@string/bg_image_content_description"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_power_training_start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/start_workout_toolbar" />

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/start_workout_toolbar"
            navigationOnClickListener="@{(view) -> viewModel.returnToPreviousFragment(view)}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_arrow_back_24"
            app:navigationIconTint="?attr/colorOnSurface"
            app:title="@string/strength_training"
            app:titleTextColor="?attr/colorOnSurface" />

        <TextView
            android:id="@+id/choose_scenario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/scenario_title"
            android:textColor="?attr/colorOnSurface"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/scenario_use_plan_button"
            app:layout_constraintTop_toBottomOf="@+id/start_workout_toolbar" />

        <TextView
            android:id="@+id/scenario_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:alpha="0.8"
            android:text="@string/scenario_description"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintEnd_toEndOf="@+id/scenario_use_plan_button"
            app:layout_constraintStart_toStartOf="@+id/choose_scenario"
            app:layout_constraintTop_toBottomOf="@+id/choose_scenario" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/scenario_use_plan_button"
            style="@style/Widget.App.PowerTraining.Button"
            isSelected="@{viewModel.uiState == UiState.SelectedPlanUse}"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginStart="@dimen/fragment_horizontal_margin"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="@dimen/fragment_horizontal_margin"
            android:onClick="@{(view) -> viewModel.onUsePlanButtonClick(view)}"
            android:text="@string/scenario_use_plan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scenario_description" />

        <TextView
            android:id="@+id/scenario_use_plan_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:alpha="0.8"
            android:text="@string/scenario_use_plan_description"
            android:textColor="?attr/colorOnSurfaceVariant"
            app:layout_constraintEnd_toEndOf="@id/scenario_use_plan_button"
            app:layout_constraintStart_toStartOf="@+id/scenario_use_plan_button"
            app:layout_constraintTop_toBottomOf="@+id/scenario_use_plan_button" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/scenario_dont_use_plan_button"
            style="@style/Widget.App.PowerTraining.Button"
            isSelected="@{viewModel.uiState == UiState.SelectedNoPlan}"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginStart="@dimen/fragment_horizontal_margin"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/fragment_horizontal_margin"
            android:onClick="@{() -> viewModel.onDoNotUsePlanButtonClick()}"
            android:text="@string/scenario_dont_use_plan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scenario_use_plan_description" />

        <TextView
            android:id="@+id/scenario_dont_use_plan_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:alpha="0.8"
            android:text="@string/scenario_dont_use_plan_description"
            android:textColor="?attr/colorOnSurfaceVariant"
            app:layout_constraintEnd_toEndOf="@id/scenario_use_plan_button"
            app:layout_constraintStart_toStartOf="@+id/scenario_use_plan_button"
            app:layout_constraintTop_toBottomOf="@+id/scenario_dont_use_plan_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/next_button"
            android:layout_width="0dp"
            android:layout_height="@dimen/big_button_height"
            android:layout_gravity="bottom"
            android:layout_margin="16dp"
            android:layout_marginStart="@dimen/fragment_horizontal_margin"
            android:layout_marginEnd="@dimen/fragment_horizontal_margin"
            android:onClick="@{(view) -> viewModel.onNextButtonClick(view)}"
            android:text="@{(viewModel.uiState == UiState.SelectedPlanUse) ? @string/start_workout : @string/next}"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:visibility="@{viewModel.uiState != UiState.NotSelected ? View.VISIBLE : View.GONE}"
            app:cornerRadius="@dimen/big_button_corner_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>